2005-12-01  Matthias Clasen  <mclasen@redhat.com>

	* tests/gobject/ifacecheck.c (test_iface_base_init): Don't
	double-free base interface members.

	* tests/Makefile.am: Remove duplicate variable.

Thu Dec  1 17:32:46 2005  Tim Janik  <timj@imendio.com>

	* glib/gslice.[hc]: new slice allocator implementation.

	* tests/slice-test.c: added random slice allocation test.

	* glib/gthread.[hc]: removed newly added private thread mem API.

	* glib/gthreadinit.h:
	* glib/gmessages.c:
	* glib/gthread.c:
	* glib/gmem.c: divided glib threading initialisation into three phases,
	initialisation where private keys and messaging are not available (only
	needed by gmem.c), initialisation without messaging but private keys
	available (gslice.c, gmessage.c), and full fledged initialisers that
	server the rest of glib. initialisation functions got renamed to reflect
	the limitations of their corresponding phases.

	* glib/gmem.c: removed memchunk code, defer allocations to 
	g_slice_* instead.

	* glib/gmem.[hc]: removed g_slice_* skeletons.

	* glib/glib.symbols: added g_slice_* symbols.

	* configure.in: check for availability of posix_memalign(3), memalign(3)
	and valloc(3). 

	* glib/Makefile.am: added gslice.[hc].

2005-12-01  Tor Lillqvist  <tml@novell.com>

	* glib/gstdio.c (g_stat): In the Win32 implementation, strip
	trailing slash(es) for non-root folders. stat() fails if non-root
	folders are specified with trailing slashes. It's too much hassle
	to demand that callers strip such slashes themselves, especially
	as it is easy to get it wrong and strip the slash of a root
	folder.
	(g_rename): On NT-based Windows, use MoveFileEx() with
	MOVEFILE_REPLACE_EXISTING to better match Unix behaviour.

2005-11-28  Matthias Clasen  <mclasen@redhat.com>

	Fix G_STMT_START / G_STMT_END on Solaris.  (#321972,
	Andrew Paprocki)
	
	* configure.in: Check whether do { } while (0) works.

	* glib/gmacros.h: Use do { } while (0) for G_STMT_START / 
	G_STMT_END if it works.
	